# dto/payment_dto.go
@@ -1,16 +1,19 @@
 package dto
 
+import "github.com/thebytearray/BytePayments/model"
+
 type CreatePaymentRequest struct {
 	PlanId       string `json:"plan_id"`
 	Email        string `json:"email"`
 	CurrencyCode string `json:"currency_code" validate:"required"`
 }
 
-type CreatePaymentResponse struct {
-	PaymentId        string  `json:"payment_id"`
-	PlanId           string  `json:"plan_id"`
-	Email            string  `json:"email"`
-	QrImage          string  `json:"qr_image"`
-	TrxAmount        float64 `json:"trx_amount"`
-	TrxWalletAddress string  `json:"trx_wallet_address"`
+type PaymentResponse struct {
+	PaymentId        string              `json:"payment_id"`
+	Status           model.PaymentStatus `json:"status"`
+	PlanId           string              `json:"plan_id"`
+	Email            string              `json:"email"`
+	QrImage          string              `json:"qr_image"`
+	TrxAmount        float64             `json:"trx_amount"`
+	TrxWalletAddress string              `json:"trx_wallet_address"`
 }
